[metadata]
name = learning-log
version = 0.1.0
description = A Django web application for creating learning lists
long_description = file: README.rst
url = https://github.com/kevinbowen777/learning-log.git
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[flake8]
select = B,B9,BLK,C,E,F,I,S,W
application-import-names = tests
docstring-convention = google
import-order-style = google
max-complexity = 10
max-line-length = 79
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    conftest.py
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    accounts/migrations/*,
    learning_logs/migrations/*,
    pages/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    #
    E501
    W503
    # bare except
    E722
per-file-ignores =
    accounts/tests.py:S101,S106
    accounts/tests/*:S101,S106
    config/tests.py:S101,S106
    config/tests/*:S101,S106
    learning_logs/tests.py:S101,S106
    learning_logs/tests/*:S101,S106
    pages/tests.py:S101,S106
    pages/tests/*:S101,S106
    config/urls.py: I202
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
